--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "aws s3 sync ./build s3://kelog-yoojinra --profile=kelog-yoojin",
+    "invalidate": "aws cloudfront create-invalidation --profil=kelog-yoojin --distribution-id E2EU55HJHGNC5Q --paths /*",
+    "all": "npm-run-all -s build deploy invalidate"
   },
   "eslintConfig": {
     "extends": [
